# create_template

./: .gitmodules  README.md
bash/: bhnewfile.sh  bhnewpro.sh  mkdir.py  newfile.py  newpro.py  rmdir.py  update_util.py
bash/template/: 12QtObj.template
cpp/: .gitignore  CMakeLists.txt  main.cpp
cpp/include/bhtools/: Fargv.h  Ftime.h  Tasync.h
cpp/src/: calc.cpp  calc.h
qt5/: .gitignore  CMakeLists.txt  app_w.ts  install.cmake  main.cpp
qt5/bash/: installpro.py  makeqrc.py  maketr.py  proconfig.py
qt5/file/css/: common.css
qt5/file/tr/: app_en_US.ts  app_ja_JP.ts
qt5/util/bhtools/: Ffile.h  Fstm.h  Ftest.h  Ftime.h  Tany.h  Tasync.h  Tcont.h  Tdesign.h  Theap.h  Tpublish.h  Trand.h  Tunpack.h  bhtools.h
qt5/util/load/: load_css.h  load_tr.cpp
qt5/window/: main_window.cpp
qt5/window/dialog/: dialog_tr.cpp  dialog_tr.h
qt6/: CMakeLists.txt  main.cpp
qt6/bash/: mkdir.py  rmdir.py
qt6/extend/: TranslatorNon.cpp  TranslatorNon.h
qt6/file/css/: style1.css  style2.css
qt6/file/tr/: app_en_US.ts  app_ja_JP.ts  app_zh_CN.ts
qt6/third/bhtools/: Ffile.h  Tlog.h
qt6/util/bhtools/: Ffm.h  Tbyte.h  Tlog.h  Tpool.h  Tsin.h  Ttimer.h
qt6/util/load/: load_css.cpp  load_css.h  load_tr.cpp  load_tr.h
qt6/window/: main_window.cpp
qt6/window/dialog/: dialog_css.cpp  dialog_css.h  dialog_tr.cpp
util/bhtools/: Fargv.h  Tstr.h
